--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -158,19 +158,19 @@
   <div class="container mt-3 text-center bg-custom-light-gray rounded flex-grow form-container" style="max-width: 400px; margin: 0 auto;">
     <form id="form">
       <div class="field">
-        <label for="from_name" style="color: black; font-size: 1.5rem;">От имени:</label>
+        <label for="from_name" style="color: black; font-size: 1.5rem;">Введите ваше имя:</label>
         <input type="text" name="from_name" id="from_name" class="form-control" style="border-radius: 0.25rem; display: inline-block;">
       </div>
       <div class="field">
-        <label for="to_name" style="color: black; font-size: 1.5rem;">К имени:</label>
+        <label for="to_name" style="color: black; font-size: 1.5rem;">Введите почту указанную на главной странице:</label>
         <input type="text" name="to_name" id="to_name" class="form-control" style="border-radius: 0.25rem; display: inline-block;">
       </div>
       <div class="field">
-        <label for="message" style="color: black; font-size: 1.5rem;">Сообщение:</label>
+        <label for="message" style="color: black; font-size: 1.5rem;">Оформить заказ:</label>
         <input type="text" name="message" id="message" class="form-control" style="border-radius: 0.25rem; display: inline-block;">
       </div>
       <div class="field">
-        <label for="reply_to" style="color: black; font-size: 1.5rem;">Ответ на:</label>
+        <label for="reply_to" style="color: black; font-size: 1.5rem;">Оставить отзыв:</label>
         <input type="text" name="reply_to" id="reply_to" class="form-control" style="border-radius: 0.25rem; display: inline-block;">
       </div>
       
