--- a/action.html
+++ b/action.html
@@ -105,6 +105,10 @@
     .navbar-nav {
         margin-left: auto; /* Move the navbar-nav to the right */
     }
+
+     .nav-item {
+        margin-right: 10px; /* Adjust the margin-right value as needed */
+    }
 </style>
 <body>
 
