--- a/action.html
+++ b/action.html
@@ -106,8 +106,9 @@
         margin-left: auto; /* Move the navbar-nav to the right */
     }
 
-     .nav-item {
-        margin-right: 10px; /* Adjust the margin-right value as needed */
+   .navbar-nav {
+        margin-left: auto;
+        margin-right: 20px; /* Adjust the margin-right value as needed */
     }
 </style>
 <body>
