--- a/action.html
+++ b/action.html
@@ -102,12 +102,16 @@
         padding: 0;
     }
 
-    .navbar-nav {
-        margin-left: auto; /* Move the navbar-nav to the right */
-    }
-    .navbar-nav {
+.navbar {
+        position: fixed;
+        top: 0;
+        right: 0;
         margin-left: auto;
-        margin-right: 100px; /* Adjust the margin-right value as needed */
+        margin-right: 20px; /* Adjust the margin-right value as needed */
+    }
+
+    .navbar-nav {
+        margin-right: 0;
     }
 
 </style>
