--- a/action.html
+++ b/action.html
@@ -111,7 +111,7 @@
     }
 
     .navbar-nav {
-        margin-right: 0;
+        margin-right: 100px; /* Adjust the margin-right value as needed */
     }
 
 </style>
