--- a/action.html
+++ b/action.html
@@ -111,6 +111,7 @@
     }
 
     .navbar-nav {
+        margin-left: auto;
         margin-right: 100px; /* Adjust the margin-right value as needed */
     }
 
