--- a/action.html
+++ b/action.html
@@ -102,19 +102,9 @@
         padding: 0;
     }
 
-.navbar {
-        position: fixed;
-        top: 0;
-        right: 0;
-        margin-left: auto;
-        margin-right: 20px; /* Adjust the margin-right value as needed */
-    }
-
     .navbar-nav {
-        margin-left: auto;
-        margin-right: 100px; /* Adjust the margin-right value as needed */
+        margin-left: auto; /* Move the navbar-nav to the right */
     }
-
 </style>
 <body>
 
