--- a/action.html
+++ b/action.html
@@ -106,8 +106,8 @@
         margin-left: auto; /* Move the navbar-nav to the right */
     }
 
-    .ml-auto {
-            margin-left: auto !important;
+.navbar-nav {
+            margin-left: auto;
         }
 </style>
 <body>
