--- a/action.html
+++ b/action.html
@@ -121,8 +121,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <!-- Wrap the navigation links in a div with ml-auto class to push them to the right -->
-                <div class="navbar-nav ml-auto">
-                    <ul class="navbar-nav ml-auto">
+                <div class="navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
                             <a class="nav-link nav-link-custom glare-effect rounded" href="main.html" style="background-color:#1781eb; color: white;">Главная</a>
                         </li>
