--- a/action.html
+++ b/action.html
@@ -121,7 +121,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <!-- Wrap the navigation links in a div with ml-auto class to push them to the right -->
-                <div class="navbar-nav mr-auto">
+                <div class="navbar-nav">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
                             <a class="nav-link nav-link-custom glare-effect rounded" href="main.html" style="background-color:#1781eb; color: white;">Главная</a>
