--- a/action.html
+++ b/action.html
@@ -101,14 +101,13 @@
         margin: 0;
         padding: 0;
     }
-
-    .navbar-nav {
+  .navbar-nav {
         margin-left: auto; /* Move the navbar-nav to the right */
     }
 
-.navbar-nav {
-            margin-left: auto;
-        }
+    .navbar-toggler {
+        order: -1; /* Move the toggler to the left */
+    }
 </style>
 <body>
 
