--- a/action.html
+++ b/action.html
@@ -101,8 +101,8 @@
         margin: 0;
         padding: 0;
     }
-  .navbar-nav {
-        margin-left: auto; /* Move the navbar-nav to the right */
+    .navbar {
+        justify-content: flex-end;
     }
 
     .navbar-toggler {
