--- a/action.html
+++ b/action.html
@@ -101,13 +101,14 @@
         margin: 0;
         padding: 0;
     }
-    .navbar {
-        justify-content: flex-end;
+
+    .navbar-nav {
+        margin-left: auto; /* Move the navbar-nav to the right */
     }
 
-    .navbar-toggler {
-        order: -1; /* Move the toggler to the left */
-    }
+.navbar-nav {
+            margin-left: auto;
+        }
 </style>
 <body>
 
@@ -121,16 +122,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <!-- Wrap the navigation links in a div with ml-auto class to push them to the right -->
                 <div class="navbar-nav">
-                          <li class="nav-item">
-                        <a class="nav-link nav-link-custom glare-effect rounded" href="main.html" style="background-color:#1781eb; color: white;">Главная</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-custom glare-effect rounded" href="action.html" style="background-color:#1781eb; color: white;">Акции</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
-                    </li>
-                </ul>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-custom glare-effect rounded" href="main.html" style="background-color:#1781eb; color: white;">Главная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-custom glare-effect rounded" href="action.html" style="background-color:#1781eb; color: white;">Акции</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="d-lg-none">
                     <!-- Your existing dropdown code -->
@@ -168,4 +170,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
-</html>
+</html> 
