--- a/main.html
+++ b/main.html
@@ -351,6 +351,16 @@
     </div>
 </div>
 
+  <py-script>
+  a = "hello "
+
+  b = "world"
+
+  c = a + b
+
+  print (c)
+  </py-script>
+
 <div class="row mt-5 bg-custom-light-gray rounded">
   <div class="col-lg-6">
     <video controls class="landing-video rounded" poster="6efb2c6cabf9f9930b7e4e581e3e5a2e.jpg">
