--- a/main.html
+++ b/main.html
@@ -352,13 +352,7 @@
 </div>
 
   <py-script>
-  a = "hello "
-
-  b = "world"
-
-  c = a + b
-
-  print (c)
+ print (hello world)
   </py-script>
 
 <div class="row mt-5 bg-custom-light-gray rounded">
